# jagw-python

./: .gitignore  Makefile  Readme.md  pyproject.toml
core/: base_pb2.py  base_pb2.pyi  enums_pb2.py  enums_pb2.pyi  filters_pb2.py  filters_pb2.pyi  topology_pb2.py  topology_pb2.pyi
examples/: request_all_nodes.py
jagw/: channel.py
requestservice/: requestservice_pb2.py  requestservice_pb2.pyi  requestservice_pb2_grpc.py
subscriptionservice/: subscriptionservice_pb2.py  subscriptionservice_pb2.pyi  subscriptionservice_pb2_grpc.py
